# Space-Explorer

./: CMakeLists.txt  README.md
res/game/: hints.ini  hints.txt
res/models/: capsule.mtl  planet01.mtl  sphere.fbx
res/planets/: InitPlanet.ini
res/shaders/: Default.frag  Default.vert  DefaultLighting.frag  model.frag  planet.frag  sun.frag
res/shaders/proceduralPlanet/: Planet.frag  Planet.vert
src/: common.hpp  main.cpp
src/collision/: BoundingSphere.cpp  BoundingSphere.hpp  CollisionGrid.cpp  CollisionGrid.hpp  CollisionLayout.cpp  CollisionLayout.hpp  CollisionManager.cpp  CollisionManager.hpp
src/engine/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  HintsImporter.cpp  HintsImporter.hpp  InputHandler.cpp  InputHandler.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp  StaticMesh.cpp  StaticMesh.hpp  Window.cpp  Window.hpp
src/game/: CelestialBody.cpp  CelestialBody.hpp  Galaxy.cpp  Galaxy.hpp  Game.cpp  Game.hpp  Hint.cpp  Hint.hpp  InteractiveObject.cpp  InteractiveObject.hpp  Planet.cpp  Planet.hpp  PlanetSettings.cpp  PlanetSettings.hpp  Spaceship.cpp  Spaceship.hpp  Species.cpp  Species.hpp  Sun.cpp  Sun.hpp
src/hud/: Hud.cpp  Hud.hpp  PanelSettings.hpp  PannelUI.cpp  PannelUI.hpp
src/imgui/: imgui_color_gradient.cpp  imgui_color_gradient.h  imgui_impl_opengl3.cpp
src/lighting/: BaseLight.cpp  BaseLight.hpp  LightManager.cpp  LightManager.hpp  PointLight.hpp
src/maths/: probas.cpp  probas.hpp  testProbas.cpp  testProbas.hpp  utils.cpp  utils.hpp
src/opengl/: Mesh.cpp  Mesh.hpp  Sphere.cpp  Sphere.hpp
src/proceduralPlanet/: Color.cpp  Color.hpp  ColorSettings.cpp  ColorSettings.hpp  Planet.cpp  Planet.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp  ShapeSettings.cpp  ShapeSettings.hpp  TerrainFace.cpp  TerrainFace.hpp
src/proceduralPlanet/io/: IOManager.cpp  IOManager.hpp
src/proceduralPlanet/noise/: NoiseFilter.cpp  NoiseFilter.hpp  NoiseFilterFactory.hpp  NoiseSettings.cpp  NoiseSettings.hpp  RigidNoiseFilter.cpp  RigidNoiseFilter.hpp  SimpleNoiseFilter.cpp  SimpleNoiseFilter.hpp
